# kt

./: .dockerignore  .gitignore  .releaserc.json  .versionrc.json  AGENTS.md  BACKLOG.md  CHANGELOG.md  Cargo.toml  README.md  docker-compose.yml  spec.md
.github/: repo-meta.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
docs/: debug-lsp-eval.md  mcp-improvement-notes.md
docs/superpowers/plans/: 2026-05-11-batched-embedding.md  2026-05-11-spec-rewrite-and-sync-refactor.md  2026-05-15-search-relevance-improvements.md
docs/superpowers/specs/: 2026-05-10-chunk-id-collision-fix-design.md  2026-05-11-batched-embedding-design.md  2026-05-11-spec-rewrite-and-sync-refactor-design.md  2026-05-11-storage-refactor-design.md  2026-05-12-agentic-rag-contract.md  2026-05-15-search-relevance-improvements-design.md
scripts/: install.sh  pre-push.sh
src/: agent.rs  codebase.rs  config.rs  debug_lsp.rs  diagnostics.rs  discovery.rs  embedding.rs  error.rs  eval.rs  file_role.rs  git.rs  global_config.rs  indexing.rs  lib.rs  main.rs  mcp.rs  mcp_setup.rs  storage.rs  sync.rs  sync_ui.rs  upgrade.rs  util.rs
src/indexing/: languages.rs
src/storage/: commands.rs  index.rs  mod.rs  search.rs
tests/: adversarial.rs  agentic_eval.rs  debug_lsp.rs  repro_issue_48.rs  retrieval_eval.rs
